@@ -1,5 +1,11 @@
 [b]Version 0.6.7[/b]:
 
+(2009-01-04)
+ * Now the dvd names follow the same scheme as mplayer: 
+   dvd://title/device (where device can also be a folder or iso file).
+   Internally it tries to avoid the use of the string "dvd:" so it could
+   be easy to add support for dvdnav:
+
 (2008-12-31)
  * Now the correct pts option can have a value of "auto". In this case
    neither -correct-pts nor -nocorrect-pts are passed to mplayer, the demuxer
